flux/apps/utilities/zerotier/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: ztnet-stack
    namespace: zerotier
spec:
    serviceName: ztnet-stack
    replicas: 1
    selector:
        matchLabels:
            app: ztnet-stack
    template:
        metadata:
            labels:
                app: ztnet-stack
        spec:
            # /dev/net/tun for ZeroTier
            volumes:
                - name: zerotier-data
                  persistentVolumeClaim:
                      claimName: zerotier-data
                - name: dev-net-tun
                  hostPath:
                      path: /dev/net/tun
                      type: CharDevice
            containers:
                - name: zerotier
                  image: zyclonite/zerotier:1.16.0
                  securityContext:
                      capabilities:
                          add: ["NET_ADMIN", "SYS_ADMIN"]
                      allowPrivilegeEscalation: true
                  volumeMounts:
                      - name: zerotier-data
                        mountPath: /var/lib/zerotier-one
                      - name: dev-net-tun
                        mountPath: /dev/net/tun
                  ports:
                      - name: zt-udp
                        containerPort: 9993
                        protocol: UDP
                - name: ztnet
                  image: sinamics/ztnet:0.7.14
                  workingDir: /app
                  ports:
                      - name: http
                        containerPort: 3000
                  volumeMounts:
                      - name: zerotier-data
                        mountPath: /var/lib/zerotier-one
