flux/apps/utilities/zerotier/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: zerotier-udp
    namespace: zerotier
spec:
    selector:
        app: ztnet-stack
    type: NodePort
    ports:
        - name: zt-udp
          port: 9993
          targetPort: 9993
          protocol: UDP
          nodePort: 30993
