flux/apps/utilities/zerotier/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: ztnet-web
    namespace: zerotier
spec:
    selector:
        app: ztnet-stack
    ports:
        - name: http
          port: 3000
          targetPort: 3000
          protocol: TCP
    type: ClusterIP
