flux/apps/utilities/zerotier/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: ztnet
    namespace: zerotier
spec:
    parentRefs:
        - name: tls-gateway
          namespace: kube-system
    hostnames:
        - zerotier.axiom.lucasfehres.nl
    rules:
        - backendRefs:
              - name: ztnet-web
                port: 3000
